# mood-detector

./: .gitignore  README.md  asset-manifest.json  index.html  package-lock.json  pr-description.md  tailwind.config.js
backend/: pyproject.toml  requirements.txt  run.py  test_textblob.py
backend/mood_detector/: __main__.py  app.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Background3D.tsx  MoodCard.tsx  TextInputPanel.tsx  ThemeToggle.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/utils/: IconWrappers.tsx
static/css/: main.1f0d9e61.css  main.1f0d9e61.css.map
static/js/: main.9c0afc99.js
