[tool.poetry]
name = "mood-detector-backend"
version = "0.1.0"
description = "Backend for mood detector application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
python-dotenv = "^1.0.0"
textblob = "^0.17.1"
nltk = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
